Adicionado botoes de velocidade

--- a/jogo.html
+++ b/jogo.html
@@ -35,7 +35,7 @@
         tabuleiro+="</tr>";
     }
     document.getElementById('principal').innerHTML=tabuleiro+"</table>";
-    cobra=[[6,0]]; //POSIÇÃO INICIAL DA COBRA
+    cobra=[[6,0]]; 
     direcao=2;
     mx=parseInt(Math.random()*13); //POSIÇÃO DA MAÇÃ
     my=parseInt(Math.random()*13);
