Adicionado botões de velocidade

--- a/jogo.html
+++ b/jogo.html
@@ -38,7 +38,7 @@
     cobra=[[6,0]]; 
     direcao=2;
     mx=parseInt(Math.random()*13); //POSIÇÃO DA MAÇÃ
-    my=parseInt(Math.random()*13);
+    my=parseInt(Math.random()*13); //posição da maçã
     vivo=true;
     var vel = 300
     function anda(){    //ANDAR
